# django-verification

./: .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  CONTRIBUTORS.txt  MANIFEST.in  Makefile  README.rst  pyproject.toml  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: tox.yml
requirements/: base.txt  development.txt
src/demo/: urls.py
src/demo/fixtures/: example.json
src/demo/projectapp/: __init__.py  apps.py  urls.py  views.py
src/demo/settings/: base.py  development.py  production.py  test.py
src/demo/static-root/: .gitignore
src/demo/templates/: 404.html  500.html  base.html  index.html
src/demo/templates/auth/: user_confirm_delete.html  user_form.html
src/demo/templates/registration/: logged_out.html  login.html
src/tests/: settings.py  tests.py  urls.py
src/verification/: __init__.py  admin.py  apps.py  forms.py  generators.py  models.py  signals.py  tests.py  urls.py  views.py
src/verification/migrations/: 0001_initial.py
src/verification/templates/verification/: claim_form.html  claim_key.html  claim_verify.html  success.html
src/verification/tests/: settings.py
