[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-verification"
description = "Generalized app for two-step verification"
authors = [{name = "kaleissin", email = "kaleissin@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Django :: 3.2",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = ["Django>=3.2,<5.1"]
dynamic = ["version"]
readme = "README.rst"

[project.urls]
Homepage = "https://github.com/kaleissin/django-verification"

[tool.hatch.build.targets.wheel]
only-packages = true
sources = ["src"]
only-include = ["src/verification"]

[tool.hatch.version]
path = "src/verification/__init__.py"

[tool.coverage.run]
branch = true

[tool.coverage.report]
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if settings.DEBUG",
    "assert False",
    "raise AssertionError",
    "raise NotImplemented",
    "if 0:",
    "if False:",
    "if None:",
    "if __name__ == .__main__.:",
]

[tool.flake8]
exclude = ".*,__pycache__,docs,migrations,*.py?,static,templates,*.csv,*.json,build,dist"
