[metadata]
name = django-verification
version = 1.1.0
description = Generalized app for two-step verification
long_description = file: README.rst
url = https://github.com/kaleissin/django-verification
author_email = kaleissin@gmail.com
author = kaleissin
classifiers =
        Development Status :: 4 - Beta
        Environment :: Web Environment
        Framework :: Django
        Intended Audience :: Developers
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
        Programming Language :: Python
        Topic :: Software Development :: Libraries :: Application Frameworks
        Topic :: Software Development :: Libraries :: Python Modules
        Framework :: Django :: 3.2
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9

[options]
zip_safe = False,
include_package_data = True,
packages = find:
package_dir =
    = src
platforms = ['any'],
install_requires = Django>=3.2,<4.0

[options.package_data]
* = *.rst

[options.packages.find]
exclude = tests
where = ./src/

[coverage:run]
branch = True

[coverage:report]
skip_empty = True
exclude_lines =
    pragma: no cover
    def __repr__
    if settings.DEBUG
    assert False
    raise AssertionError
    raise NotImplemented
    if 0:
    if False:
    if None:
    if __name__ == .__main__.:

[flake8]
exclude = .*,__pycache__,docs,migrations,*.py?,static,templates,*.csv,*.json,build,dist

[wheel]
universal = 1
